--- a/music/index.html
+++ b/music/index.html
@@ -1,1 +1,12 @@
-music!
+<audio controls>
+  <source src="Freezing Point.wav" type="audio/wav">
+whoops sorry your browser sucks oh well
+</audio>
+<audio controls>
+  <source src="music that doesn't suck.wav" type="audio/wav">
+whoops sorry your browser sucks oh well
+</audio>
+<audio controls>
+  <source src="Figures.wav" type="audio/wav">
+whoops sorry your browser sucks oh well
+</audio>
