--- a/music/index.html
+++ b/music/index.html
@@ -1,11 +1,14 @@
+Freezing Point
 <audio controls>
   <source src="Freezing Point.wav" type="audio/wav">
 whoops sorry your browser sucks oh well
-</audio>
+</audio><br>
+music that doesn't suck
 <audio controls>
   <source src="music that doesn't suck.wav" type="audio/wav">
 whoops sorry your browser sucks oh well
-</audio>
+</audio><br>
+Figures
 <audio controls>
   <source src="Figures.wav" type="audio/wav">
 whoops sorry your browser sucks oh well
