--- a/lyrics/feral.html
+++ b/lyrics/feral.html
@@ -2,68 +2,68 @@
 <h3>By <b>Radiohead</b></h3>
 <small><small>(This is what I believe the lyrics are, and therefore may not be 100% accurate.)</small></small>
 <p>
-{0:33}
-You are
-No
-
-{0:49}
-Judge
-Judge
-Judge
-No
-
-{1:03}
-And I 
-Am not 
-Yours
-No way
-D;Y[ou] [w]o[uld]en't {*}
-You thought
-
-{1:24}
-Please
-Don't
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge
-Judge (No)
-
-{1:59}
-(Judge)
-(No Judge)
-(No Judge)
-(You are)
-(You are)
-(You are)
-(You are)
-(You are)
-(You are)+(No Judge)
-(You are)+(No Judge)
-(You are)+(No Judge)
-(You are)+(No Judge)
-(You are)+(No Judge)
-
-{2:37}
-(No Judge)
-(No Judge)
-(No Judge)
-(No Judge)
-(No Judge)
-(No Judge)
-(No Judge)
-(No Judge)
-(No Judge)
+{0:33}<br>
+You are<br>
+No<br>
+<br>
+{0:49}<br>
+Judge<br>
+Judge<br>
+Judge<br>
+No<br>
+<br>
+{1:03}<br>
+And I<br>
+Am not<br>
+Yours<br>
+No way<br>
+D;Y[ou] [w]o[uld]en't {*}<br>
+You thought<br>
+<br>
+{1:24}<br>
+Please<br>
+Don't<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge<br>
+Judge (No)<br>
+<br>
+{1:59}<br>
+(Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+(You are)<br>
+(You are)<br>
+(You are)<br>
+(You are)<br>
+(You are)<br>
+(You are)+(No Judge)<br>
+(You are)+(No Judge)<br>
+(You are)+(No Judge)<br>
+(You are)+(No Judge)<br>
+(You are)+(No Judge)<br>
+<br>
+{2:37}<br>
+(No Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+(No Judge)<br>
+<br>
+~~~<br>
+<br>
+*Unintelligible<br>
 </p>
-
-~~~
-
-*Unintelligible
