--- a/lyrics/lotusflower.html
+++ b/lyrics/lotusflower.html
@@ -30,7 +30,7 @@ I set you free<br>
 <br>
 {2:03}<br>
 Slowly we unfurl, as lotus flowers<br>
-[Be]cause all I want is a moon upon a stick<br>
+'Cause all I want is a moon upon a stick<br>
 Just to see what if<br>
 Just to see what is<br>
 I can't kick your habit<br>
@@ -51,14 +51,14 @@ So now I set you free<br>
 I set you free<br>
 <br>
 {3:26}<br>
-[Be]cause all I want is a moon upon a stick<br>
+'Cause all I want is a moon upon a stick<br>
 Just to see what if<br>
 Just to see what is<br>
 Bird that's flown into my room<br>
 <br>
 {3:51}<br>
 Slowly we unfurl, as lotus flowers<br>
-[Be]cause all I want is a moon upon a stick<br>
+'Cause all I want is a moon upon a stick<br>
 I'm dancing around a pit<br>
 The darkness is beneath<br>
 I can't kick your habit<br>
