--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -1,7 +1,7 @@
 <head>
 	<title>lyrics</title>
 	<meta charset="utf-8">
-	<link rel="icon" href="lyricsicon..png">
+	<link rel="icon" href="lyricsicon.png">
 	<meta id="meta-title" property="og:title" content="lyrics">
 	<meta id="meta-desc" property="og:description" content="find mostly accurate lyrics to songs">
 	<meta id="meta-image" name="og:image" content="https://masalt2.github.io/lyrics/lyricsicon.png" itemprop="image">
