--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -19,15 +19,15 @@
             var s = document.getElementById("search").value;
 
             if (s === "feral") {
-                window.open("/feral.html");
+                window.open("../feral.html");
             }
 
             if (s === "lotus flower") {
-                window.open("/lotusflower.html");
+                window.open("../lotusflower.html");
             }
 
             if (s === "morning bell") {
-                window.open("/morningbell.html");
+                window.open("../morningbell.html");
             }
 
         }
