--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -34,7 +34,7 @@
     </script>
 </body>
 <p>or just search through all the links:</p>
-<a href="/feral.html">feral</a>
-<a href="/lotusflower.html">lotus flower</a>
-<a href="/morningbell.html">morning bell</a>
+<a href="/feral.html">feral</a><br>
+<a href="/lotusflower.html">lotus flower</a><br>
+<a href="/morningbell.html">morning bell</a><br>
 </html>
