--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -19,22 +19,22 @@
             var s = document.getElementById("search").value;
 
             if (s === "feral") {
-                window.open("../feral.html");
+                window.open("/lyrics/feral.html");
             }
 
             if (s === "lotus flower") {
-                window.open("../lotusflower.html");
+                window.open("/lyrics/lotusflower.html");
             }
 
             if (s === "morning bell") {
-                window.open("../morningbell.html");
+                window.open("/lyrics/morningbell.html");
             }
 
         }
     </script>
 </body>
 <p>or just search through all the links:</p>
-<a href="/feral.html">feral</a><br>
-<a href="/lotusflower.html">lotus flower</a><br>
-<a href="/morningbell.html">morning bell</a><br>
+<a href="/lyrics/feral.html">feral</a><br>
+<a href="/lyrics/lotusflower.html">lotus flower</a><br>
+<a href="/lyrics/morningbell.html">morning bell</a><br>
 </html>
