--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -12,7 +12,7 @@
 <html>
 <p>search lowercase:</p>
 <body style=" background-color: rgb(233, 242, 247);">
-    <input type="search" value="" id="search" onchange="openPage()">
+    <input type="search" value="" id="search" onchange="openPage()" multiple>
 
     <script>
         function openPage() {
