--- a/lyrics/morningbell.html
+++ b/lyrics/morningbell.html
@@ -1,3 +1,4 @@
+<title>morning bell lyrics</title>
 <h1>Morning Bell</h1>
 <h3>By <b>Radiohead</b></h3>
 <small><small>(This is what I believe the lyrics are, and therefore may not be 100% accurate.)</small></small>
