--- a/lyrics/likespinningplates.html
+++ b/lyrics/likespinningplates.html
@@ -1,3 +1,4 @@
+<title>like spinning plates lyrics</title>
 <h1>Like Spinning Plates</h1>
 <h3>By <b>Radiohead</b></h3>
 <small><small>(This is what I believe the lyrics are, and therefore may not be 100% accurate.)</small></small>
