--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -17,24 +17,24 @@
     <script>
         function openPage() {
             var s = document.getElementById("search").value;
-
             if (s === "feral") {
                 window.open("/lyrics/feral.html");
             }
-
             if (s === "lotus flower") {
                 window.open("/lyrics/lotusflower.html");
             }
-
             if (s === "morning bell") {
                 window.open("/lyrics/morningbell.html");
             }
-
+            if (s === "like spinning plates") {
+                window.open("/lyrics/likespinningplates.html");
+            }
         }
     </script>
 </body>
 <p>or just search through all the links:</p>
 <a href="/lyrics/feral.html">feral</a><br>
+<a href="/lyrics/likespinningplates.html">like spinning plates</a><br>
 <a href="/lyrics/lotusflower.html">lotus flower</a><br>
 <a href="/lyrics/morningbell.html">morning bell</a><br>
 </html>
