--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -32,7 +32,7 @@
         }
     </script>
 </body>
-<p>or just search through all the links:</p>
+<p>or just look through the list of links:</p>
 <a href="/lyrics/feral.html">feral</a><br>
 <a href="/lyrics/likespinningplates.html">like spinning plates</a><br>
 <a href="/lyrics/lotusflower.html">lotus flower</a><br>
