--- a/lyrics/likespinningplates.html
+++ b/lyrics/likespinningplates.html
@@ -2,19 +2,19 @@
 <h1>Like Spinning Plates</h1>
 <h3>By <b>Radiohead</b></h3>
 <small><small>(This is what I believe the lyrics are, and therefore may not be 100% accurate.)</small></small>
-<p>
-{1:45}<br>
-While you make pretty speeches<br>
-I'm being cut to shreds<br>
-You feed me to the lions<br>
-A delicate balance<br>
-<br>
-{2:27}<br>
-And this just feels like<br>
-Spinning plates<br>
-I'm living in cloud<br>
-Cuckoo land<br>
-And this just feels like<br>
-Spinning plates<br>
-My body is floating down the muddy river<br>
-</p>
+<pre>
+{1:45}
+While you make pretty speeches
+I'm being cut to shreds
+You feed me to the lions
+A delicate balance
+
+{2:27}
+And this just feels like
+Spinning plates
+I'm living in cloud
+Cuckoo land
+And this just feels like
+Spinning plates
+My body is floating down the muddy river
+</pre>
