--- a/lyrics/lotusflower.html
+++ b/lyrics/lotusflower.html
@@ -2,67 +2,67 @@
 <h1>Lotus Flower</h1>
 <h3>By <b>Radiohead</b></h3>
 <small><small>(This is what I believe the lyrics are, and therefore may not be 100% accurate.)</small></small>
-<p>
-{0:57}<br>
-I will shape myself into your pocket<br>
-Invisible<br>
-Do what you want<br>
-Do what you want<br>
-<br>
-{1:12}<br>
-I will shrink and I will disappear<br>
-I will slip into a groove<br>
-And cut me out<br>
-And cut me off<br>
-<br>
-{1:30}<br>
-There's an empty space<br>
-Inside my heart<br>
-Where the weeds take root<br>
-So now I set you free<br>
-I set you free<br>
-<br>
-{1:45}<br>
-There's an empty space<br>
-Inside my heart<br>
-Where the weeds take root<br>
-So now I set you free<br>
-I set you free<br>
-<br>
-{2:03}<br>
-Slowly we unfurl, as lotus flowers<br>
-'Cause all I want is a moon upon a stick<br>
-Just to see what if<br>
-Just to see what is<br>
-I can't kick your habit<br>
-Just to feel your fast ballooning head<br>
-Listen to your heart<br>
-<br>
-{2:46}<br>
-We will shrink and then be quiet as mice<br>
-While the cat is away<br>
-Do what we want<br>
-Do what we want<br>
-<br>
-{3:04}<br>
-There's an empty space<br>
-Inside my heart<br>
-Where the weeds take root<br>
-So now I set you free<br>
-I set you free<br>
-<br>
-{3:26}<br>
-'Cause all I want is a moon upon a stick<br>
-Just to see what if<br>
-Just to see what is<br>
-Bird that's flown into my room<br>
-<br>
-{3:51}<br>
-Slowly we unfurl, as lotus flowers<br>
-'Cause all I want is a moon upon a stick<br>
-I'm dancing around a pit<br>
-The darkness is beneath<br>
-I can't kick your habit<br>
-Just to feed your fast ballooning head<br>
-Listen to your heart<br>
-</p>
+<pre>
+{0:57}
+I will shape myself into your pocket
+Invisible
+Do what you want
+Do what you want
+
+{1:12}
+I will shrink and I will disappear
+I will slip into a groove
+And cut me out
+And cut me off
+
+{1:30}
+There's an empty space
+Inside my heart
+Where the weeds take root
+So now I set you free
+I set you free
+
+{1:45}
+There's an empty space
+Inside my heart
+Where the weeds take root
+So now I set you free
+I set you free
+
+{2:03}
+Slowly we unfurl, as lotus flowers
+'Cause all I want is a moon upon a stick
+Just to see what if
+Just to see what is
+I can't kick your habit
+Just to feel your fast ballooning head
+Listen to your heart
+
+{2:46}
+We will shrink and then be quiet as mice
+While the cat is away
+Do what we want
+Do what we want
+
+{3:04}
+There's an empty space
+Inside my heart
+Where the weeds take root
+So now I set you free
+I set you free
+
+{3:26}
+'Cause all I want is a moon upon a stick
+Just to see what if
+Just to see what is
+Bird that's flown into my room
+
+{3:51}
+Slowly we unfurl, as lotus flowers
+'Cause all I want is a moon upon a stick
+I'm dancing around a pit
+The darkness is beneath
+I can't kick your habit
+Just to feed your fast ballooning head
+Listen to your heart
+</pre>
