--- a/lyrics/morningbell.html
+++ b/lyrics/morningbell.html
@@ -2,71 +2,71 @@
 <h1>Morning Bell</h1>
 <h3>By <b>Radiohead</b></h3>
 <small><small>(This is what I believe the lyrics are, and therefore may not be 100% accurate.)</small></small>
-<p>
-{0:28}<br>
-The morning bell<br>
-The mourning bell<br>
-Light another candle and<br>
-Release me<br>
-Release me<br>
-<br>
-{0:50}<br>
-You can keep the furniture<br>
-[A] bump on the head<br>
-Howling down the chimney<br>
-Release me<br>
-Release me<br>
-Please<br>
-<br>
-{1:23}<br>
-Release me<br>
-Release me<br>
-<br>
-{1:32}<br>
-Where'd you park the car?<br>
-Where'd you park the car?<br>
-[The] clothes are all over the<br>
-Furniture<br>
-Now, I might as well<br>
-I might as well<br>
-Sleepy jack, the fire drill<br>
-Round and round and round and<br>
-Round and round and round and round<br>
-And round<br>
-<br>
-{2:14}<br>
-Cut the kids in half<br>
-Cut the kids in half<br>
-Cut the kids in half<br>
-<br>
-{3:05}<br>
-Come to the class, get away from {*}<br>
-Walking so far muscles achin[g] {*}<br>
-Everyone wants to be a friend and<br>
-Nobody wants to be here 'cause<br>
-Walking, walking, walking walking<br>
-Walking, walking, walking walking<br>
-Walking, walking, walking walking<br>
-Walking, walking, walking walking<br>
-Yeah, who is it coming for?<br>
-But lots of trials and error 'cause<br>
-What a surprise, level with a<br>
-Sinister pride, we'll tell you 'cause<br>
-Walking, walking, walking walking<br>
-Walking, walking, walking walking<br>
-Walking, walking, walking walking<br>
-Walking, walking, walking walking<br>
-Walking, walking, walk walk<br>
-Walking, walking, walking walk<br>
-Who has it come for?<br>
-Grander scheme<br>
-????? {*}<br>
-Walking, walking, walk walk<br>
-Walking, walking, walk walk<br>
-Walking, walking, walk walk<br>
-Walking, walking, walk walk<br>
-<br>
-~~~<br>
-<br>
-* Unintelligible<br>
-</p>
+<pre>
+{0:28}
+The morning bell
+The mourning bell
+Light another candle and
+Release me
+Release me
+
+{0:50}
+You can keep the furniture
+[A] bump on the head
+Howling down the chimney
+Release me
+Release me
+Please
+
+{1:23}
+Release me
+Release me
+
+{1:32}
+Where'd you park the car?
+Where'd you park the car?
+[The] clothes are all over the
+Furniture
+Now, I might as well
+I might as well
+Sleepy jack, the fire drill
+Round and round and round and
+Round and round and round and round
+And round
+
+{2:14}
+Cut the kids in half
+Cut the kids in half
+Cut the kids in half
+
+{3:05}
+Come to the class, get away from {*}
+Walking so far muscles achin[g] {*}
+Everyone wants to be a friend and
+Nobody wants to be here 'cause
+Walking, walking, walking walking
+Walking, walking, walking walking
+Walking, walking, walking walking
+Walking, walking, walking walking
+Yeah, who is it coming for?
+But lots of trials and error 'cause
+What a surprise, level with a
+Sinister pride, we'll tell you 'cause
+Walking, walking, walking walking
+Walking, walking, walking walking
+Walking, walking, walking walking
+Walking, walking, walking walking
+Walking, walking, walk walk
+Walking, walking, walking walk
+Who has it come for?
+Grander scheme
+????? {*}
+Walking, walking, walk walk
+Walking, walking, walk walk
+Walking, walking, walk walk
+Walking, walking, walk walk
+
+~~~
+
+* Unintelligible
+</pre>
