--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-arts
+i like:
+
+radiohead
+bill wurtz
+jack stauber
+thom yorke
+<hr>
+<a href="/tracklists">tracklists</a>
+<a href="/lyrics">lyrics to songs i like (mainly radiohead and bill wurtz but maybe other stuff too)</a>
