--- a/radiohead/happy.html
+++ b/radiohead/happy.html
@@ -47,7 +47,7 @@ Pulk/Pull Revolving Doors /// But there are trapdoors, that you can’t come bac
 Packt Like Sardines In a Cru	shd Tin Box /// I’m a reasonable man, get off my case, get off my case.
 All I Need /// I only stick with you because there are no others.
 In Limbo /// Come back…
-Vegetable /// I never wanted anythin like this.
+Vegetable /// I never wanted anything like this.
 Decks Dark /// Sweet darling…
 Bones /// Ground to dust and ash, crawling on all fours.
 Ripcord /// You’re free until you drop.
