--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ jack stauber
 thom yorke
 <hr>
 <a href="/tracklists">tracklists</a>
-<a href="/lyrics">lyrics to songs i like (mainly radiohead and bill wurtz but maybe other stuff too)</a>
+<a href="/lyrics">lyrics to songs i like (mainly radiohead but maybe other stuff too)</a>
