--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@ thom yorke
 <hr>
 <a href="/tracklists">tracklists</a>
 <a href="/lyrics">lyrics to songs i like (mainly radiohead but maybe other stuff too)</a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<input type=button onClick="location.href='/radiohead'" value='my crippling radiohead addiction'>
