--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>proceed with caution</title>
 i like:
 
 radiohead
@@ -9,3 +10,4 @@ thom yorke
 <a href="/lyrics">lyrics to songs i like (mainly radiohead but maybe other stuff too)</a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <input type=button onClick="location.href='/radiohead'" value='my crippling radiohead addiction'>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
