--- a/danger/danger.html
+++ b/danger/danger.html
@@ -2,113 +2,115 @@
 <html>
 <body>
 <br><br><br><br><br><br><br><br>
-<?php
-$t = rand(1, 51);
-if ($t == 1) {
-  echo "as lotus flowers";
-} elseif ($t == 2) {
-  echo "get off my case";
-} elseif ($t == 3) {
-  echo "if you'd been a dog";
-} elseif ($t == 4) {
-  echo "a universal sigh";
-} elseif ($t == 5) {
-  echo "this is my way of saying goodbye";
-} elseif ($t == 6) {
-  echo "all i want is a moon upon a stick";
-} elseif ($t == 7) {
-  echo "the would've drowned you at birth";
-} elseif ($t == 8) {
-  echo "because i can't do it face to face";
-} elseif ($t == 9) {
-  echo "i'm a reasonable man";
-} elseif ($t == 10) {
-  echo "catch da mouse";
-} elseif ($t == 11) {
-  echo "all you have to do is say";
-} elseif ($t == 12) {
-  echo "broken hearts";
-} elseif ($t == 13) {
-  echo "you do it to yourself";
-} elseif ($t == 14) {
-  echo "https://citizeninsane.eu/";
-} elseif ($t == 15) {
-  echo "it was just a laugh";
-} elseif ($t == 16) {
-  echo "jigsaw falling into place";
-} elseif ($t == 17) {
-  echo "this kind of thin thin thin thin thin thing";
-} elseif ($t == 18) {
-  echo "so there is nothing to explain";
-} elseif ($t == 19) {
-  echo "come to your senses (somehow)";
-} elseif ($t == 20) {
-  echo "regard each other as you pass";
-} elseif ($t == 21) {
-  echo "this just feels like spinning plates";
-} elseif ($t == 22) {
-  echo "she looks back you look back";
-} elseif ($t == 23) {
-  echo "its a terrible shame";
-} elseif ($t == 24) {
-  echo "not just once, not just twice";
-} elseif ($t == 25) {
-  echo "its a terrible shame i know";
-} elseif ($t == 26) {
-  echo "youre being took for a ride";
-} elseif ($t == 27) {
-  echo "the raindrops";
-} elseif ($t == 28) {
-  echo "plain old and easy";
-} elseif ($t == 29) {
-  echo "kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic";
-} elseif ($t == 30) {
-  echo "couldn't wave a white flag";
-} elseif ($t == 31) {
-  echo "a penny for your thoughts, my love";
-} elseif ($t == 32) {
-  echo "dance, you f*cker";
-} elseif ($t == 33) {
-  echo "flan in the face";
-} elseif ($t == 34) {
-  echo "just to see what if";
-} elseif ($t == 35) {
-  echo "just to see what is";
-} elseif ($t == 36) {
-  echo "they possess me";
-} elseif ($t == 37) {
-  echo "they possess me";
-} elseif ($t == 38) {
-  echo "they possess me";
-} elseif ($t == 39) {
-  echo "i'm tryna be a thought killer";
-} elseif ($t == 40) {
-  echo "oh no, pop is dead; long live pop";
-} elseif ($t == 41) {
-  echo "you can taste it but it will not come";
-} elseif ($t == 42) {
-  echo "i am born again";
-} elseif ($t == 43) {
-  echo "in a fast geman car";
-} elseif ($t == 44) {
-  echo "i'm amazed that i survived";
-} elseif ($t == 45) {
-  echo "as it closes up my arms";
-} elseif ($t == 46) {
-  echo "the position of the worms";
-} elseif ($t == 47) {
-  echo "an airbag saved my life";
-} elseif ($t == 48) {
-  echo "up up through my heart";
-} elseif ($t == 49) {
-  echo "into my brain";
-} elseif ($t == 50) {
-  echo "yeahhh";
-} else {
-  echo "see that long and stretchy smile go right across your faaace";
-};
-?>
+<p id="text"></p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <button onClick="window.location.reload();">sit down, stand up</button>
 </body>
+<script>
+document.getElementById("text").innerHTML =  "as lotus flowers";
+var t = Math.ceil(Math.random() * 51);
+if (t == 1) {
+  document.getElementById("text").innerHTML =  "as lotus flowers";
+} else if (t == 2) {
+  document.getElementById("text").innerHTML =  "get off my case";
+} else if (t == 3) {
+  document.getElementById("text").innerHTML =  "if you'd been a dog";
+} else if (t == 4) {
+  document.getElementById("text").innerHTML =  "a universal sigh";
+} else if (t == 5) {
+  document.getElementById("text").innerHTML =  "this is my way of saying goodbye";
+} else if (t == 6) {
+  document.getElementById("text").innerHTML =  "all i want is a moon upon a stick";
+} else if (t == 7) {
+  document.getElementById("text").innerHTML =  "the would've drowned you at birth";
+} else if (t == 8) {
+  document.getElementById("text").innerHTML =  "because i can't do it face to face";
+} else if (t == 9) {
+  document.getElementById("text").innerHTML =  "i'm a reasonable man";
+} else if (t == 10) {
+  document.getElementById("text").innerHTML =  "catch da mouse";
+} else if (t == 11) {
+  document.getElementById("text").innerHTML =  "all you have to do is say";
+} else if (t == 12) {
+  document.getElementById("text").innerHTML =  "broken hearts";
+} else if (t == 13) {
+  document.getElementById("text").innerHTML =  "you do it to yourself";
+} else if (t == 14) {
+  document.getElementById("text").innerHTML =  "https://citizeninsane.eu/";
+} else if (t == 15) {
+  document.getElementById("text").innerHTML =  "it was just a laugh";
+} else if (t == 16) {
+  document.getElementById("text").innerHTML =  "jigsaw falling into place";
+} else if (t == 17) {
+  document.getElementById("text").innerHTML =  "this kind of thin thin thin thin thin thing";
+} else if (t == 18) {
+  document.getElementById("text").innerHTML =  "so there is nothing to explain";
+} else if (t == 19) {
+  document.getElementById("text").innerHTML =  "come to your senses (somehow)";
+} else if (t == 20) {
+  document.getElementById("text").innerHTML =  "regard each other as you pass";
+} else if (t == 21) {
+  document.getElementById("text").innerHTML =  "this just feels like spinning plates";
+} else if (t == 22) {
+  document.getElementById("text").innerHTML =  "she looks back you look back";
+} else if (t == 23) {
+  document.getElementById("text").innerHTML =  "its a terrible shame";
+} else if (t == 24) {
+  document.getElementById("text").innerHTML =  "not just once, not just twice";
+} else if (t == 25) {
+  document.getElementById("text").innerHTML =  "its a terrible shame i know";
+} else if (t == 26) {
+  document.getElementById("text").innerHTML =  "youre being took for a ride";
+} else if (t == 27) {
+  document.getElementById("text").innerHTML =  "the raindrops";
+} else if (t == 28) {
+  document.getElementById("text").innerHTML =  "plain old and easy";
+} else if (t == 29) {
+  document.getElementById("text").innerHTML =  "kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic";
+} else if (t == 30) {
+  document.getElementById("text").innerHTML =  "couldn't wave a white flag";
+} else if (t == 31) {
+  document.getElementById("text").innerHTML =  "a penny for your thoughts, my love";
+} else if (t == 32) {
+  document.getElementById("text").innerHTML =  "dance, you f*cker";
+} else if (t == 33) {
+  document.getElementById("text").innerHTML =  "flan in the face";
+} else if (t == 34) {
+  document.getElementById("text").innerHTML =  "just to see what if";
+} else if (t == 35) {
+  document.getElementById("text").innerHTML =  "just to see what is";
+} else if (t == 36) {
+  document.getElementById("text").innerHTML =  "they possess me";
+} else if (t == 37) {
+  document.getElementById("text").innerHTML =  "they possess me";
+} else if (t == 38) {
+  document.getElementById("text").innerHTML =  "they possess me";
+} else if (t == 39) {
+  document.getElementById("text").innerHTML =  "i'm tryna be a thought killer";
+} else if (t == 40) {
+  document.getElementById("text").innerHTML =  "oh no, pop is dead; long live pop";
+} else if (t == 41) {
+  document.getElementById("text").innerHTML =  "you can taste it but it will not come";
+} else if (t == 42) {
+  document.getElementById("text").innerHTML =  "i am born again";
+} else if (t == 43) {
+  document.getElementById("text").innerHTML =  "in a fast geman car";
+} else if (t == 44) {
+  document.getElementById("text").innerHTML =  "i'm amazed that i survived";
+} else if (t == 45) {
+  document.getElementById("text").innerHTML =  "as it closes up my arms";
+} else if (t == 46) {
+  document.getElementById("text").innerHTML =  "the position of the worms";
+} else if (t == 47) {
+  document.getElementById("text").innerHTML =  "an airbag saved my life";
+} else if (t == 48) {
+  document.getElementById("text").innerHTML =  "up up through my heart";
+} else if (t == 49) {
+  document.getElementById("text").innerHTML =  "into my brain";
+} else if (t == 50) {
+  document.getElementById("text").innerHTML =  "yeahhh";
+} else {
+  document.getElementById("text").innerHTML =  "see that long and stretchy smile go right across your faaace";
+};
+</script>
 </html>
