--- a/danger/danger.html
+++ b/danger/danger.html
@@ -22,7 +22,7 @@ if (t == 1) {
 } else if (t == 6) {
   document.getElementById("text").innerHTML =  "all i want is a moon upon a stick";
 } else if (t == 7) {
-  document.getElementById("text").innerHTML =  "the would've drowned you at birth";
+  document.getElementById("text").innerHTML =  "they would've drowned you at birth";
 } else if (t == 8) {
   document.getElementById("text").innerHTML =  "because i can't do it face to face";
 } else if (t == 9) {
