--- a/danger/danger.html
+++ b/danger/danger.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>danger///the raindrops</title>
 <body>
 <br><br><br><br><br><br><br><br>
 <p id="text"></p>
@@ -7,7 +8,6 @@
 <button onClick="window.location.reload();">sit down, stand up</button>
 </body>
 <script>
-document.getElementById("text").innerHTML =  "as lotus flowers";
 var t = Math.ceil(Math.random() * 51);
 if (t == 1) {
   document.getElementById("text").innerHTML =  "as lotus flowers";
