--- a/danger/danger.html
+++ b/danger/danger.html
@@ -94,7 +94,7 @@ if (t == 1) {
 } else if (t == 42) {
   document.getElementById("text").innerHTML =  "i am born again";
 } else if (t == 43) {
-  document.getElementById("text").innerHTML =  "in a fast geman car";
+  document.getElementById("text").innerHTML =  "in a fast german car";
 } else if (t == 44) {
   document.getElementById("text").innerHTML =  "i'm amazed that i survived";
 } else if (t == 45) {
