--- a/danger/danger.html
+++ b/danger/danger.html
@@ -90,7 +90,7 @@ if (t == 1) {
 } else if (t == 40) {
   document.getElementById("text").innerHTML =  "oh no, pop is dead; long live pop";
 } else if (t == 41) {
-  document.getElementById("text").innerHTML =  "you can taste it but it will not come";
+  document.getElementById("text").innerHTML =  "you can force it but it will not come";
 } else if (t == 42) {
   document.getElementById("text").innerHTML =  "i am born again";
 } else if (t == 43) {
