--- a/danger/danger.html
+++ b/danger/danger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>danger///the raindrops</title>
-<body>
+<body text="#ffffff">
 <br><br><br><br><br><br><br><br>
 <p id="text"></p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
