--- a/danger/danger.html
+++ b/danger/danger.html
@@ -121,4 +121,19 @@ if (t == 1) {
   document.getElementById("text").innerHTML =  "see that long and stretchy smile go right across your faaace";
 };
 </script>
+<style>
+html, body {
+    height: 100%;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
+}
+</style>
 </html>
