--- a/danger/danger.html
+++ b/danger/danger.html
@@ -30,11 +30,11 @@ if (t == 1) {
 } else if (t == 6) {
   document.getElementById("text").innerHTML =  "all i want is a moon upon a stick";
 } else if (t == 7) {
-  document.getElementById("text").innerHTML =  "they would've drowned you at birth";
+  document.getElementById("text").innerHTML =  "they wouldve drowned you at birth";
 } else if (t == 8) {
-  document.getElementById("text").innerHTML =  "because i can't do it face to face";
+  document.getElementById("text").innerHTML =  "because i cant do it face to face";
 } else if (t == 9) {
-  document.getElementById("text").innerHTML =  "i'm a reasonable man";
+  document.getElementById("text").innerHTML =  "im a reasonable man";
 } else if (t == 10) {
   document.getElementById("text").innerHTML =  "catch da mouse";
 } else if (t == 11) {
@@ -76,11 +76,11 @@ if (t == 1) {
 } else if (t == 29) {
   document.getElementById("text").innerHTML =  "kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic kinetic";
 } else if (t == 30) {
-  document.getElementById("text").innerHTML =  "couldn't wave a white flag";
+  document.getElementById("text").innerHTML =  "couldnt wave a white flag";
 } else if (t == 31) {
   document.getElementById("text").innerHTML =  "a penny for your thoughts, my love";
 } else if (t == 32) {
-  document.getElementById("text").innerHTML =  "dance, you f*cker";
+  document.getElementById("text").innerHTML =  "dance you f*cker";
 } else if (t == 33) {
   document.getElementById("text").innerHTML =  "flan in the face";
 } else if (t == 34) {
@@ -96,7 +96,7 @@ if (t == 1) {
 } else if (t == 39) {
   document.getElementById("text").innerHTML =  "i'm tryna be a thought killer";
 } else if (t == 40) {
-  document.getElementById("text").innerHTML =  "oh no, pop is dead; long live pop";
+  document.getElementById("text").innerHTML =  "oh no pop is dead long live pop";
 } else if (t == 41) {
   document.getElementById("text").innerHTML =  "you can force it but it will not come";
 } else if (t == 42) {
@@ -104,7 +104,7 @@ if (t == 1) {
 } else if (t == 43) {
   document.getElementById("text").innerHTML =  "in a fast german car";
 } else if (t == 44) {
-  document.getElementById("text").innerHTML =  "i'm amazed that i survived";
+  document.getElementById("text").innerHTML =  "im amazed that i survived";
 } else if (t == 45) {
   document.getElementById("text").innerHTML =  "as it closes up my arms";
 } else if (t == 46) {
@@ -118,7 +118,7 @@ if (t == 1) {
 } else if (t == 50) {
   document.getElementById("text").innerHTML =  "yeahhh";
 } else {
-  document.getElementById("text").innerHTML =  "see that long and stretchy smile go right across your faaace";
+  document.getElementById("text").innerHTML =  "[see that long and stretchy smile go right across your faaace]";
 };
 </script>
 <style>
