--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@ thom yorke
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <input type=button onClick="location.href='/radiohead'" value='my crippling radiohead addiction'>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<input type=button onClick="location.href='/danger/danger.html'" value='danger'>
