--- a/danger/hell.html
+++ b/danger/hell.html
@@ -1,6 +1,6 @@
 the jaws of hell
 coming soon to a location near you
-<audio autoplay loop>
+<audio controls autoplay loop>
   <source src="thegallery.mp3" type="audio/mpeg">
   You really messed up everything. (Your browser messed you up.)
 </audio>
