--- a/danger/hell.html
+++ b/danger/hell.html
@@ -1,6 +1,4 @@
 the jaws of hell
 coming soon to a location near you
-<audio controls autoplay loop>
-  <source src="thegallery.ogg" type="audio/ogg">
-  You really messed up everything. (Your browser messed you up.)
-</audio>
+<iframe src="thegallery.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe> 
