--- a/danger/hell.html
+++ b/danger/hell.html
@@ -1,4 +1,5 @@
 the jaws of hell
 coming soon to a location near you
-<iframe src="thegallery.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-</iframe> 
+<div>
+   <embed src="thegallery.mp3" autostart=true loop=false width="1px" height="1px">
+</div>
