--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@ thom yorke
 <input type=button onClick="location.href='/radiohead'" value='my crippling radiohead addiction'>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <input type=button onClick="location.href='/danger/danger.html'" value='danger'>
+<style>#my{
+zoom: 150%;
+  }</style>
