--- a/danger/hell.html
+++ b/danger/hell.html
@@ -1,2 +1,43 @@
-the jaws of hell
-coming soon to a location near you
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.flex-container {
+  display: flex;
+  background-color: #cdef69;
+  flex-wrap: wrap;
+}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  font-size: 30px;
+  text-align: center;
+  width: 100px;
+  height: 100px;
+  border: 1px solid red;
+  margin: -1px;
+}
+</style>
+</head>
+<body>
+
+<h1>the jaws of hell</h1>
+<p>coming soon to a location near you</p>
+
+<div class="flex-container">
+  <div>1</div>
+  <div>1</div>
+  <div style="flex-basis: 200px">2</div>
+  <div>3</div>
+  <div>5</div>
+  <div>8</div>
+  <div>13</div>
+  <div>21</div>
+  <div>34</div>
+  <div>55</div>
+  <div>89</div>
+  <div>144</div>
+</div>
+
+</body>
+</html>
