--- a/danger/hell.html
+++ b/danger/hell.html
@@ -4,7 +4,6 @@
 <style>
 .flex-container {
   display: flex;
-  background-color: #cdef69;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -15,7 +14,7 @@
   text-align: center;
   width: 200px;
   height: 200px;
-  border: 1px solid red;
+  border: 1px solid white;
   margin: -1px;
 }
 </style>
