--- a/danger/hell.html
+++ b/danger/hell.html
@@ -19,7 +19,7 @@
 }
 </style>
 </head>
-<body bgcolor="black">
+<body bgcolor="black" text="#ffffff">
 
 <h1>the jaws of hell</h1>
 <p>coming soon to a location near you</p>
