--- a/danger/hell.html
+++ b/danger/hell.html
@@ -1,23 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.flex-container > div {
-  background-color: #f1f1f1;
-  font-size: 50px;
-  text-align: center;
-  width: 200px;
-  height: 200px;
-  border: 1px solid white;
-  margin: -1px;
-}
-</style>
 </head>
 <body bgcolor="black" text="#ffffff">
 
@@ -38,6 +21,23 @@
   <div>89</div>
   <div>144</div>
 </div>
-
 </body>
+<style>
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.flex-container > div {
+  color: #ffffff;
+  background-color: #f1f1f1;
+  font-size: 50px;
+  text-align: center;
+  width: 200px;
+  height: 200px;
+  border: 1px solid white;
+  margin: -1px;
+}
+</style>
 </html>
