--- a/danger/hell.html
+++ b/danger/hell.html
@@ -30,7 +30,7 @@
 }
 
 .flex-container > div {
-  color: #ffffff;
+  color: #000000;
   background-color: #f1f1f1;
   font-size: 50px;
   text-align: center;
