--- a/danger/hell.html
+++ b/danger/hell.html
@@ -8,7 +8,7 @@
 <p>coming soon to a location near you</p>
 
 <div class="flex-container">
-  <div style="content:url(img/HellSirens.png);"></div>
+  <div style="background-image:url(img/HellSirens.png);"></div>
   <div>1</div>
   <div style="flex-basis: 400px">2</div>
   <div>3</div>
