--- a/danger/hell.html
+++ b/danger/hell.html
@@ -8,7 +8,7 @@
 <p>coming soon to a location near you</p>
 
 <div class="flex-container">
-  <div style="background-image:url(img/HellSirens.png);"></div>
+  <div><img src="img/HellSirens.png"></div>
   <div>1</div>
   <div style="flex-basis: 400px">2</div>
   <div>3</div>
@@ -23,6 +23,10 @@
 </div>
 </body>
 <style>
+img {
+  max-width:100%;
+  mex-height: 100%
+}
 .flex-container {
   display: flex;
   flex-wrap: wrap;
