--- a/danger/hell.html
+++ b/danger/hell.html
@@ -8,18 +8,12 @@
 <p>coming soon to a location near you</p>
 
 <div class="flex-container">
+  <div><img src="img/PostAwarenessConfusions.png"></div>
   <div><img src="img/HellSirens.png"></div>
-  <div>1</div>
-  <div style="flex-basis: 400px">2</div>
-  <div>3</div>
-  <div>5</div>
-  <div>8</div>
-  <div>13</div>
-  <div>21</div>
-  <div>34</div>
-  <div>55</div>
-  <div>89</div>
-  <div>144</div>
+  <div style="flex-basis: 400px"><img src="img/itsholdingon-1x2.png"></div>
+  <div><img src="img/noskull.png"></div>
+  <div><img src="img/SCSCREAMcrop.png"></div>
+  <div><img src="img/Amnesiac3.png"></div>
 </div>
 </body>
 <style>
