--- a/danger/hell.html
+++ b/danger/hell.html
@@ -4,9 +4,9 @@
 </head>
 <body bgcolor="black" text="#ffffff">
 
-<h1>the jaws of hell</h1>
-<p>coming soon to a location near you</p>
-
+<div style="width: 250px;height: 150px;">
+<img src="img/hellhead.png"></div>
+</div>
 <div class="flex-container">
   <div><img src="img/PostAwarenessConfusions.png"></div>
   <div><img src="img/HellSirens.png"></div>
@@ -17,6 +17,10 @@
 </div>
 </body>
 <style>
+body {
+  max-width: 500px;
+  margin: auto;
+}
 img {
   max-width:100%;
   mex-height: 100%
