--- a/danger/hell.html
+++ b/danger/hell.html
@@ -6,7 +6,7 @@
 
 <div style="width: 250px;height: 150px;">
 <img src="img/hellhead.png"></div>
-</div>
+</div><br>
 <div class="flex-container">
   <div><img src="img/PostAwarenessConfusions.png"></div>
   <div><img src="img/HellSirens.png"></div>
