--- a/danger/hell.html
+++ b/danger/hell.html
@@ -4,7 +4,7 @@
 </head>
 <body bgcolor="black" text="#ffffff">
 
-<div style="width: 250px;height: 150px;">
+<div class="center" style="width: 250px;height: 150px;">
 <img src="img/hellhead.png"></div>
 </div><br>
 
@@ -18,7 +18,7 @@
 </div>
 </body>
 <style>
-body {
+.center {
   max-width: 500px;
   margin: auto;
 }
