--- a/danger/hell.html
+++ b/danger/hell.html
@@ -33,13 +33,13 @@ img {
 }
 
 .flex-container > div {
+  box-sizing: border-box;
   color: #000000;
   font-size: 50px;
   text-align: center;
   width: 200px;
   height: 200px;
   border: 3px solid black;
-  margin: -3px;
 }
 </style>
 </html>
