--- a/danger/hell.html
+++ b/danger/hell.html
@@ -9,14 +9,14 @@
 </div><br>
 
 <div class="flex-container">
-  <div><img src="img/end-1x1.png"></div>
-  <div style="flex-basis: 400px"><img src="img/tkolfull.png"></div>
-  <div><img src="img/PostAwarenessConfusions.png"></div>
-  <div><img src="img/HellSirens.png"></div>
-  <div style="flex-basis: 400px"><img src="img/itsholdingon-1x2.png"></div>
-  <div><img src="img/noskull.png"></div>
-  <div><img src="img/SCSCREAMcrop.png"></div>
-  <div><img src="img/Amnesiac3.png"></div>
+  <div><img src="img/end-1x1.png" onclick="window.open('img/end-1x1.png', '_blank');"></div>
+  <div style="flex-basis: 400px"><img src="img/tkolfull.png" onclick="window.open('img/tkolfull.png', '_blank');></div>
+  <div><img src="img/PostAwarenessConfusions.png" onclick="window.open('img/PostAwarenessConfusions.png', '_blank');></div>
+  <div><img src="img/HellSirens.png" onclick="window.open('img/HellSirens.png', '_blank');></div>
+  <div style="flex-basis: 400px"><img src="img/itsholdingon-1x2.png" onclick="window.open('img/itsholdingon-1x2.png', '_blank');></div>
+  <div><img src="img/noskull.png" onclick="window.open('img/noskull.png', '_blank');></div>
+  <div><img src="img/SCSCREAMcrop.png" onclick="window.open('img/SCSCREAMcrop.png', '_blank');></div>
+  <div><img src="img/Amnesiac3.png" onclick="window.open('img/Amnesiac3.png', '_blank');></div>
 </div>
 </body>
 <style>
