--- a/danger/hell.html
+++ b/danger/hell.html
@@ -16,7 +16,7 @@
   <div style="flex-basis: 400px"><img src="img/itsholdingon-1x2.png" onclick="window.open('img/itsholdingon-1x2.png', '_blank');"></div>
   <div><img src="img/noskull.png" onclick="window.open('img/noskull.png', '_blank');"></div>
   <div><img src="img/SCSCREAMcrop.png" onclick="window.open('img/SCSCREAMcrop.png', '_blank');"></div>
-  <div><img src="img/Amnesiac3.png" onclick="window.open('img/Amnesiac3.png', '_blank');"></div>
+  <div><img src="img/Amnesiac3wbg.png" onclick="window.open('img/Amnesiac3wbg.png', '_blank');"></div>
 </div>
 </body>
 <style>
