--- a/danger/danger.html
+++ b/danger/danger.html
@@ -6,6 +6,8 @@
 <p id="text"></p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <button onClick="window.location.reload();">sit down, stand up</button>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<button onClick="location.href='/danger/hell.html'">walk into the Jaws of Hell</button>
 </body>
 <script>
 function random_bg_color() {
