--- a/danger/hell.html
+++ b/danger/hell.html
@@ -4,8 +4,10 @@
 </head>
 <body bgcolor="black" text="#ffffff">
 
+<audio id="sound1" src="thegallery.mp3" preload="auto" loop></audio>
+
 <div class="center" style="width: 500px;height: 300px;">
-<img src="img/hellhead.png"></div>
+<img src="img/hellhead.png" onclick="document.getElementById('sound1').play();"></div>
 </div><br>
 
 <div class="flex-container">
